--- a/game.html
+++ b/game.html
@@ -1,7 +1,7 @@
 <head>
 <title>SATYAM GAMES</title>
 <p>feel safe its mine (satyam) webite</p>
-
+<style> body {background-image: url(OIP.jpeg);}</style>
 <p>1 . minecraft download link </p>
 <a href="https://llaun.ch/repo/downloads/LegacyLauncher_Installer_mcl.exe" target="_blank"><button>press</button></a>
 
