--- a/game.html
+++ b/game.html
@@ -21,7 +21,7 @@
 </html>
 
 
-<style> body {background-image: url(OIP.jpeg);}</style>
+<style> body {background-image: url(OP.jpeg);}</style>
 <div>
 
     <a href="minecraft-online.jpg"><img src="minecraft-online.jpg" alt="minecraft java" width="100" height="100" > </a>
