--- a/play.html
+++ b/play.html
@@ -1,3 +1,5 @@
+<style> body {background-image: url(OP.jpg);}</style>
+
 <html lang="en" style="background-color: black;>
           <head>
             <meta charset="UTF-8">
