--- a/game.html
+++ b/game.html
@@ -34,7 +34,7 @@
 
     <div>
     
-        <p ><h3 style="color: aliceblue;"> safe its mine (satyam) webite </h3></p>
+        <p ><h3 style="color: aliceblue;"> safe its mine (satyam) website </h3></p>
     
         <p ><h3 style="color: aliceblue;">download <a href="https://www.microsoft.com/store/productId/9NRLSXZTVRK5?ocid=pdpshare" target="_blank"><button style="height: 30px; width: 100px;">Torrent Plus</button></a> from microsoft store for .torrent files</h3></p>
         <p>...</p>
