--- a/game.html
+++ b/game.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <title>Satyam Games</title>
-<button>home</button>
-<a href="play.html" ><button style="cursor: pointer;">play online</button></a>
+<a href="https://satyum29.github.io/gamers/game.html"><button style="cursor: pointer">home</button></a>
+<a href="https://satyum29.github.io/gamers/play.html" ><button style="cursor: pointer;">play online</button></a>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap" rel="stylesheet">
