--- a/game.html
+++ b/game.html
@@ -91,7 +91,7 @@
 </div>
 </div>
 </div>
-<button><p><h2> More Game Comming Soon </h2></p></button>
+<button><p><h2> More Game Coming Soon </h2></p></button>
 
 <!-- javascript -->
 <script type="text/javascript">
