--- a/game.html
+++ b/game.html
@@ -1,15 +1,24 @@
-<!DOCTYPE html>
+
 <html>
 <head>
 <title>Satyam Games</title>
-<a href="https://satyum29.github.io/gamers/game.html"><button style="cursor: pointer">home</button></a>
-<a href="https://satyum29.github.io/gamers/play.html" ><button style="cursor: pointer;">play online</button></a>
+<button>home</button>
+<a href="play.html" ><button style="cursor: pointer;">play online</button></a>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap" rel="stylesheet">
+<div class="info">
 
-        <p ><h2 style="text-align: center;"> safe its mine (satyam) website </h2></p>
-        <p ><h2 style="text-align: center;">download <a href="https://www.microsoft.com/store/productId/9NRLSXZTVRK5?ocid=pdpshare"  target="_blank" ><button style="cursor: pointer;"><h3 style="font-family: Georgia, 'Times New Roman', Times, serif">Torrent Plus</h3></button></a> from microsoft store for .torrent files</h2></p>
+        <p ><h2 > safe its mine (satyam) website </h2></p>
+        <p ><h2 >download <a href="https://www.microsoft.com/store/productId/9NRLSXZTVRK5?ocid=pdpshare"  target="_blank" ><button style="cursor: pointer;"><h3 style="font-family: Georgia, 'Times New Roman', Times, serif">Torrent Plus</h3></button></a> from microsoft store for .torrent files</h2></p>
+
+</div>
+        <style>
+                .info{
+                        color: #d6ffba;
+                       text-align: center;
+                }
+        </style>
 
 <body>
 <div class="container-fluid">
@@ -24,63 +33,63 @@
     
 <div class="product">
 <img src="image/A Difficult Game About Climbing.cover.jpg" height="300" width="240">
-<h3>A Difficult Game</h3>
-<h3> About Climbing</h3>
+<h3 style="color: aliceblue;">A Difficult Game</h3>
+<h3 style="color: aliceblue;"> About Climbing</h3>
 <h2><a href="https://filenext.org/5b30f9107f20c698/A.Difficult.Game.About.Climbing.zip?download_token=c4a1d940feb9d00ed2aed167fb55a9ade2525945c3f1903af077ff98adf64983" target="_blank"><button style="cursor: pointer;"><p > Download</p></button></a><h3>password: 123</h3> </h2>
 </div>
 
 <div class="product">
 <img src="image/gta5.jpeg" height="300" width="250">
-<h3>Grand Theft</h3>
-<h3>Auto 5</h3>
+<h3 style="color: aliceblue;">Grand Theft</h3>
+<h3 style="color: aliceblue;">Auto 5</h3>
 <h4>soon</h4>
 </div>
 
 
 <div class="product">
 <img src="image/cod.jpeg" height="300" width="240">
-<h3>Call Of Duty </h3>
-<h3>Modern Warfare 3</h3>
+<h3 style="color: aliceblue;">Call Of Duty </h3>
+<h3 style="color: aliceblue;">Modern Warfare 3</h3>
 <h2><a href="magnet:?xt=urn:btih:24D07D7050CA3FB00AF55752CEC597D7B1731058&dn=Call+of+Duty+Modern+Warfare+3-RELOADED&tr=http%3A%2F%2Fexodus.desync.com%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.1337x.org%3A80%2Fannounce&tr=http%3A%2F%2F9.rarbg.com%3A2710%2Fannounce&tr=http%3A%2F%2Fcpleft.com%3A2710%2Fannounce&tr=http%3A%2F%2Ftracker.publicbt.com%3A80%2Fannounce&tr=http%3A%2F%2Ftracker.novalayer.org%3A6969%2Fannounce&tr=http%3A%2F%2Ftracker.torrent.to%3A2710%2Fannounce&tr=udp%3A%2F%2Ftracker.istole.it%3A80%2Fannounce&tr=udp%3A%2F%2Ftracker.openbittorrent.com%3A80&tr=http%3A%2F%2Ftracker.torrentbay.to%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.opentrackr.org%3A1337%2Fannounce&tr=http%3A%2F%2Ftracker.openbittorrent.com%3A80%2Fannounce&tr=udp%3A%2F%2Fopentracker.i2p.rocks%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.internetwarriors.net%3A1337%2Fannounce&tr=udp%3A%2F%2Ftracker.leechers-paradise.org%3A6969%2Fannounce&tr=udp%3A%2F%2Fcoppersurfer.tk%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.zer0day.to%3A1337%2Fannounce" target="_blank"><button style="cursor: pointer;"><p > Download</p></button></a><h3>password: 123</h3> </h2>
 </div>
 
 
 <div class="product">
 <img src="image/hitman 3.jpeg" height="300" width="240">
-<h3>hitman 3</h3>
-<h3 style="color: #ddd;">...</h3>
+<h3 style="color: aliceblue;">hitman 3</h3>
+<h3 style="color: #000000;">...</h3>
 <h2><a href="magnet:?xt=urn:btih:2FFCE99E178450E96296A78011395E338EB2A47F&dn=Hitman.3-CODEX&tr=udp%3a%2f%2ftracker.trackerfix.com%3a82%2fannounce&tr=udp%3a%2f%2f9.rarbg.me%3a2880%2fannounce&tr=udp%3a%2f%2f9.rarbg.to%3a2970%2fannounce" target="_blank"> <button style="cursor: pointer;"><p > Download</p></button> </a></h2>
 </div>
 
 
 <div class="product">
 <img src="image/minecraft-java-edition-457367.11.jpg" height="300" width="240">
-<h3>Minecraft</h3>
-<h3 style="color: #ddd;">...</h3>
+<h3 style="color: aliceblue;">Minecraft</h3>
+<h3 style="color: #000000;">...</h3>
 <h2><a href="https://llaun.ch/repo/downloads/LegacyLauncher_Installer_mcl.exe" target="_blank"> <button style="cursor: pointer;"><p > Download</p></button></a></h2>
 </div>
 
 
 <div class="product">
 <img src="image/devil-may-cry-1.jpg" height="300" width="240">
-<h3>Devil May Cry 1</h3>
-<h3 style="color: #ddd;">...</h3>
+<h3 style="color: aliceblue;">Devil May Cry 1</h3>
+<h3 style="color: #000000;">...</h3>
 <h4>soon</h4>
 </div>
 
 
 <div class="product">
 <img src="image/OIP.jpeg" height="300" width="240">
-<h3>Devil May Cry 4</h3>
-<h3 style="color: #ddd;">...</h3>
+<h3 style="color: aliceblue;">Devil May Cry 4</h3>
+<h3 style="color: #000000;">...</h3>
 <h4>soon</h4>
 </div>
 
 
 <div class="product">
 <img src="image/dmc5.jpeg" height="300" width="240">
-<h3>Devil May Cry 5</h3>
-<h3 style="color: #ddd;">...</h3>
+<h3 style="color: aliceblue;">Devil May Cry 5</h3>
+<h3 style="color: #000000;">...</h3>
 <h4>soon</h4>
 </div>
 
@@ -91,7 +100,18 @@
 </div>
 </div>
 </div>
-<button><p><h2> More Game Coming Soon </h2></p></button>
+<div class="more">
+        <button><p><h2> More Game Comming Soon </h2></p></button>
+</div>
+<style>
+        .more{
+        background-color: #037c25;
+        color: #d6ffba;
+        height: 20;
+        width: 40;
+}
+</style>
+
 
 <!-- javascript -->
 <script type="text/javascript">
@@ -123,7 +143,7 @@ item[i].style.display="none";
     }
     body
     {
-    background: #ddd;
+    background: #000000;
     }
     .container-fluid
     {
@@ -147,19 +167,21 @@ item[i].style.display="none";
     {
     letter-spacing: 3px;
     display: inline-block;
-    border-bottom: 2px solid green;
+    border-bottom: 2px solid rgb(129, 250, 125);
     padding-bottom: 10px;
+    color: azure;
     }
     .container .search input
     {
     width: 60%;
     padding: 5px 16px;
     background: transparent;
-    border: 1px solid #000;
+    border: 1px solid #ffffff;
     font-size: 20px;
     text-transform: capitalize;
     letter-spacing: 3px;
     outline: none;
+    color: #d6ffba;
     }
     .container .search input::placeholder
     {
@@ -201,5 +223,9 @@ item[i].style.display="none";
     display: inline-block;
     font-size: 16px;
     }
-
+    body {
+    background-image: url("image/OP.jpg");
+}
+ 
     </style>
+
