--- a/game.html
+++ b/game.html
@@ -1,8 +1,8 @@
-
 <html>
 <head>
 <title>Satyam Games</title>
 <button>home</button>
+<a href="https://satyum29.github.io/gamers/info.html" ><button style="cursor: pointer;">info</button></a>
 <a href="https://satyum29.github.io/gamers/play.html" ><button style="cursor: pointer;">play online</button></a>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -74,7 +74,7 @@
 <img src="image/devil-may-cry-1.jpg" height="300" width="240">
 <h3 style="color: aliceblue;">Devil May Cry 1</h3>
 <h3 style="color: #000000;">...</h3>
-<h4>soon</h4>
+<h2><a href="https://fs2.uploadbeast.com/games/Devil.May.Cry.1(GamingBeasts.com).zip?id=d1af8a6327c8ed0371e2&expires=1709683200" target="_blank"> <button style="cursor: pointer;"><p > Download</p></button></a></h2>
 </div>
 
 
@@ -82,7 +82,7 @@
 <img src="image/OIP.jpeg" height="300" width="240">
 <h3 style="color: aliceblue;">Devil May Cry 4</h3>
 <h3 style="color: #000000;">...</h3>
-<h4>soon</h4>
+<h2><a href="magnet:?xt=urn:btih:9965D72562C63F31C24411B98CB37278A4516345" target="_blank"> <button style="cursor: pointer;"><p > Download</p></button></a></h2>
 </div>
 
 
@@ -90,7 +90,7 @@
 <img src="image/dmc5.jpeg" height="300" width="240">
 <h3 style="color: aliceblue;">Devil May Cry 5</h3>
 <h3 style="color: #000000;">...</h3>
-<h4>soon</h4>
+<h2><a href="magnet:?xt=urn:btih:E0110D3FC68AD66CFA4851B86A6F05AC274E3DDD " target="_blank"> <button style="cursor: pointer;"><p > Download</p></button></a></h2>
 </div>
 
 
