--- a/game.html
+++ b/game.html
@@ -8,8 +8,9 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap" rel="stylesheet">
 <div class="info">
-
-        <p ><h2 > safe its mine (satyam) website </h2></p>
+  
+        <p style="color: #000000;">_____________________________________</p>
+        <p style="color: #000000;">_____________________________________</p>
         <p ><h2 >download <a href="https://www.microsoft.com/store/productId/9NRLSXZTVRK5?ocid=pdpshare"  target="_blank" ><button style="cursor: pointer;"><h3 style="font-family: Georgia, 'Times New Roman', Times, serif">Torrent Plus</h3></button></a> from microsoft store for .torrent files</h2></p>
 
 </div>
@@ -42,7 +43,9 @@
 <img src="image/gta5.jpeg" height="300" width="250">
 <h3 style="color: aliceblue;">Grand Theft</h3>
 <h3 style="color: aliceblue;">Auto 5</h3>
-<h4>soon</h4>
+
+<h2><a href="https://fs1.bowfile.com/token/download/dl/58oy/Grand_Theft_Auto_V_[FitGirl_Repack].torrent?download_token=d9cb5dff48d8fab32e310667ccb71e65f19654897db39143e25867f3555b5e4f     " target="_blank"><button style="cursor: pointer;"><p > Download</p></button></a> </h2>
+
 </div>
 
 
@@ -220,4 +223,5 @@ item[i].style.display="none";
 }
  
     </style>
+
 
