--- a/info.html
+++ b/info.html
@@ -5,8 +5,8 @@
 
 
 <div class="info">
-    <h1><p>i am satyam patel</p></h1>
-    <h2><p>its my own website so it's safe</p></h2>
+    <h1><p>I Am Beast Cut</p></h1>
+    <h2><p>Its my own website so it's safe. don't worry all the games which are provided are tested by me</p></h2>
 </div>
 
 <style>
