--- a/tutorial.html
+++ b/tutorial.html
@@ -1,58 +1,23 @@
-<!DOCTYPE html>
-<html>
+
+
+  <html>
 <head>
 <title>Satyam Games</title>
-<a href="https://satyum29.github.io/gamers/game.html"><button style="cursor: pointer">home</button></a>
+<button>home</button>
+<a href="https://satyum29.github.io/gamers/info.html" ><button style="cursor: pointer;">info</button></a>
 <a href="https://satyum29.github.io/gamers/play.html" ><button style="cursor: pointer;">play online</button></a>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap" rel="stylesheet">
 
 
+  
 
 </html>
-<head>
-    <style>
-    h1 {text-align: center;}
-    p {text-align: center;}
-    div {text-align: center;}
-    </style>
-    </head>
-    <body>
- <div style="align-items: center;">
-<iframe src="https://ev.io/" height="720px" width="1200px""></iframe>
+
+ <div class="tut">    
+    <video width="1080" height="720" controls>
+        <source src="video/How To Install Fitgirl Repacks.mp4" type="video/mp4">  
+              </video>
  </div>
 
- <html>
-
-
-
-</div>
-</div>
-</div>
-
-
-<!-- javascript -->
-<script type="text/javascript">
-function search() {
-let filter = document.getElementById('find').value.toUpperCase();
-let item = document.querySelectorAll('.product');
-let l = document.getElementsByTagName('h3');
-for(var i = 0;i<=l.length;i++){
-let a=item[i].getElementsByTagName('h3')[0];
-let value=a.innerHTML || a.innerText || a.textContent;
-if(value.toUpperCase().indexOf(filter) > -1) {
-item[i].style.display="";
-}
-else
-{
-item[i].style.display="none";
-}
-}
-}
-</script>
-</body>
-</html>
 <style type="text/css">
     *
     {
@@ -62,7 +27,7 @@ item[i].style.display="none";
     }
     body
     {
-    background: #ddd;
+    background: #000000;
     }
     .container-fluid
     {
@@ -86,19 +51,21 @@ item[i].style.display="none";
     {
     letter-spacing: 3px;
     display: inline-block;
-    border-bottom: 2px solid green;
+    border-bottom: 2px solid rgb(129, 250, 125);
     padding-bottom: 10px;
+    color: azure;
     }
     .container .search input
     {
     width: 60%;
     padding: 5px 16px;
     background: transparent;
-    border: 1px solid #000;
+    border: 1px solid #ffffff;
     font-size: 20px;
     text-transform: capitalize;
     letter-spacing: 3px;
     outline: none;
+    color: #d6ffba;
     }
     .container .search input::placeholder
     {
@@ -140,8 +107,13 @@ item[i].style.display="none";
     display: inline-block;
     font-size: 16px;
     }
-body{
-    background-color: #000;
-    background-image: url(image/OP.jpg);
+    body {
+    background-image: url("image/OP.jpg");
 }
+.tut{
+    border: #000000;
+    text-align: center;
+    padding: 100;
+}
+   
     </style>
