--- a/game.html
+++ b/game.html
@@ -5,6 +5,7 @@
 <button>home</button>
 <a href="https://satyum29.github.io/gamers/info.html" ><button style="cursor: pointer;">info</button></a>
 <a href="https://satyum29.github.io/gamers/play.html" ><button style="cursor: pointer;">play online</button></a>
+<a href="https://satyum29.github.io/gamers/tutorial.html" ><button style="cursor: pointer;">Tutorial</button></a>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap" rel="stylesheet">
