--- a/info.html
+++ b/info.html
@@ -6,8 +6,10 @@
 
 <div class="info">
     <h1><p>I Am Beast Cut</p></h1>
-    <h2><p>Its my own website so it's safe. don't worry all the games which are provided are tested by me</p></h2>
+    <h2><p>Its my own website so it's safe. </p></h2>
+    <h2><P>don't worry all the games which are provided are tested by me</P></h2>
 </div>
+
 
 <style>
     .info{
