--- a/tutorial.html
+++ b/tutorial.html
@@ -3,7 +3,7 @@
   <html>
 <head>
 <title>Satyam Games</title>
-<button>home</button>
+<a href="https://satyum29.github.io/gamers/game.html"><button>home</button></a>>
 <a href="https://satyum29.github.io/gamers/info.html" ><button style="cursor: pointer;">info</button></a>
 <a href="https://satyum29.github.io/gamers/play.html" ><button style="cursor: pointer;">play online</button></a>
 
