--- a/game.html
+++ b/game.html
@@ -1,7 +1,9 @@
-
+<head>
+        <link rel="icon" type="image/png" href="image/sas.jpeg" />
+    </head>
 <html>
 <head>
-<title>Satyam Games</title>
+<title>BeastCut Games</title>
 <button>home</button>
 <a href="https://satyum29.github.io/gamers/info.html" ><button style="cursor: pointer;">info</button></a>
 <a href="https://satyum29.github.io/gamers/play.html" ><button style="cursor: pointer;">play online</button></a>
