--- a/game.html
+++ b/game.html
@@ -1,9 +1,9 @@
 <head>
-        <link rel="icon" type="image/png" href="image/sas.jpeg" />
+        <link rel="icon" type="image/png" href="image/sas.jpg" />
     </head>
 <html>
 <head>
-<title>BeastCut Games</title>
+<title>Beast_Cut Games</title>
 <button>home</button>
 <a href="https://satyum29.github.io/gamers/info.html" ><button style="cursor: pointer;">info</button></a>
 <a href="https://satyum29.github.io/gamers/play.html" ><button style="cursor: pointer;">play online</button></a>
