--- a/game.html
+++ b/game.html
@@ -38,13 +38,23 @@
 <input type="text" name="" id="find" placeholder="search here...." onkeyup="search()">
 </div>
 <div class="product-list">
-    
+
         <div class="product">
-                <img src="image/sekiro-shadows-die-twice.jpg" height="300" width="250">
-                <h3 style="color: aliceblue;">Sekiro</h3>
-                <h3 > ...</h3>
-                <h2><a href="magnet:?xt=urn:btih:072BA1C165E0D528D2E23EA0FCD35E066D3FCDAA&dn=Sekiro%3A+Shadows+Die+Twice+-+Game+of+the+Year+Edition+%28v1.06+%2B+Bonus+Content%2C+MULTi13%29+%5BFitGirl+Repack%2C+Selective+Download+-+from+7.2+GB%5D&tr=udp%3A%2F%2F46.148.18.250%3A2710&tr=udp%3A%2F%2Fopentor.org%3A2710&tr=udp%3A%2F%2Ftracker.coppersurfer.tk%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.opentrackr.org%3A1337%2Fannounce&tr=http%3A%2F%2Ftracker.dler.org%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.leechers-paradise.org%3A6969%2Fannounce&tr=udp%3A%2F%2F9.rarbg.me%3A2730%2Fannounce&tr=udp%3A%2F%2F9.rarbg.to%3A2770%2Fannounce&tr=udp%3A%2F%2Ftracker.pirateparty.gr%3A6969%2Fannounce&tr=http%3A%2F%2Fretracker.local%2Fannounce&tr=http%3A%2F%2Fretracker.ip.ncnet.ru%2Fannounce&tr=udp%3A%2F%2Fexodus.desync.com%3A6969%2Fannounce&tr=udp%3A%2F%2Fipv4.tracker.harry.lu%3A80%2Fannounce&tr=udp%3A%2F%2Fopen.stealth.si%3A80%2Fannounce&tr=udp%3A%2F%2Ftracker.zer0day.to%3A1337%2Fannounce&tr=udp%3A%2F%2Ftracker.leechers-paradise.org%3A6969%2Fannounce&tr=udp%3A%2F%2Fcoppersurfer.tk%3A6969%2Fannounce " target="_blank"><button style="cursor: pointer;"><p > Download</p></button></a><h3>password: 123</h3> </h2>
+                <img src="image/pal.jpeg" height="300" width="250">
+                <h3 style="color: aliceblue;">Palworld</h3>
+                <h3 style="color: #fff;"> (v0.2.3.0)</h3>
+                <h2><a href="https://f67.megaup.net/l39A1/Palworld_v0.2.3.0.part1.rar?download_token=8ee84c65d164b47bd651ff55ce678423c6658e25b3769a2af61174d4c37d4620 "target="_blank"><button style="cursor: pointer;"><p > P1</p></button>
+                 <a href="https://f44.megaup.net/ehz0Q/Palworld_v0.2.3.0.part2.rar?download_token=30e5a563e33ca68e55a9409355586fb4ea2730285a1172dad8a6db4e88bef7d3" target="_blank"><button style="cursor: pointer;"><p > P2</p></button>
+                 <a href="https://f16.megaup.net/rOK9q/Palworld_v0.2.3.0.part3.rar?download_token=e1f931022d1a9e80d06b30a2225a495f5dc437f8a8df01ee2bebd56c9857255e" target="_blank"><button style="cursor: pointer;"><p > P3</p></button>
+                 <a href="https://f44.megaup.net/rOK9k/Palworld_v0.2.3.0.part4.rar?download_token=d08755362d3e2d52e6eb3478c8d1aafb2125e6629a30f2f1c96ae3982d0934b2" target="_blank"><button style="cursor: pointer;"><p > P4</p></button></a></h2>
                 </div>
+    
+<div class="product">
+<img src="image/sekiro-shadows-die-twice.jpg" height="300" width="250">
+<h3 style="color: aliceblue;">Sekiro</h3>
+<h3 > ...</h3>
+<h2><a href="magnet:?xt=urn:btih:072BA1C165E0D528D2E23EA0FCD35E066D3FCDAA&dn=Sekiro%3A+Shadows+Die+Twice+-+Game+of+the+Year+Edition+%28v1.06+%2B+Bonus+Content%2C+MULTi13%29+%5BFitGirl+Repack%2C+Selective+Download+-+from+7.2+GB%5D&tr=udp%3A%2F%2F46.148.18.250%3A2710&tr=udp%3A%2F%2Fopentor.org%3A2710&tr=udp%3A%2F%2Ftracker.coppersurfer.tk%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.opentrackr.org%3A1337%2Fannounce&tr=http%3A%2F%2Ftracker.dler.org%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.leechers-paradise.org%3A6969%2Fannounce&tr=udp%3A%2F%2F9.rarbg.me%3A2730%2Fannounce&tr=udp%3A%2F%2F9.rarbg.to%3A2770%2Fannounce&tr=udp%3A%2F%2Ftracker.pirateparty.gr%3A6969%2Fannounce&tr=http%3A%2F%2Fretracker.local%2Fannounce&tr=http%3A%2F%2Fretracker.ip.ncnet.ru%2Fannounce&tr=udp%3A%2F%2Fexodus.desync.com%3A6969%2Fannounce&tr=udp%3A%2F%2Fipv4.tracker.harry.lu%3A80%2Fannounce&tr=udp%3A%2F%2Fopen.stealth.si%3A80%2Fannounce&tr=udp%3A%2F%2Ftracker.zer0day.to%3A1337%2Fannounce&tr=udp%3A%2F%2Ftracker.leechers-paradise.org%3A6969%2Fannounce&tr=udp%3A%2F%2Fcoppersurfer.tk%3A6969%2Fannounce " target="_blank"><button style="cursor: pointer;"><p > Download</p></button></a><h3>password: 123</h3> </h2>
+</div>
 
 <div class="product">
 <img src="image/A Difficult Game About Climbing.cover.jpg" height="300" width="250">
@@ -111,9 +121,9 @@
 </div>
 
 
-
-
-
+</div>
+</div>
+</div>
 </div>
 </div>
 </div>
