--- a/info.html
+++ b/info.html
@@ -11,63 +11,4 @@
 </div>
 
 
-<style>
-    .info{
-        color: rgb(167, 254, 173);
-        text-align: center;
-        text-shadow: 1;
-        text-decoration: solid;
-
-
-    }
-    body{
-        background-color: black;
-       background-image: url(image/OP.jpg); 
-    }
-    button {
-  appearance: none;
-  backface-visibility: hidden;
-  background-color: #27ae60;
-  border-radius: 8px;
-  border-style: none;
-  box-shadow: rgba(39, 174, 96, .15) 0 4px 9px;
-  box-sizing: border-box;
-  color: #fff;
-  cursor: pointer;
-  display: inline-block;
-  font-family: Inter,-apple-system,system-ui,"Segoe UI",Helvetica,Arial,sans-serif;
-  font-size: 16px;
-  font-weight: 600;
-  letter-spacing: normal;
-  line-height: 1.5;
-  outline: none;
-  overflow: hidden;
-  padding: 13px 20px;
-  position: relative;
-  text-align: center;
-  text-decoration: none;
-  transform: translate3d(0, 0, 0);
-  transition: all .3s;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  vertical-align: top;
-  white-space: nowrap;
-}
-
-button:hover {
-  background-color: #1e8449;
-  opacity: 1;
-  transform: translateY(0);
-  transition-duration: .35s;
-}
-
-button:active {
-  transform: translateY(2px);
-  transition-duration: .35s;
-}
-
-button:hover {
-  box-shadow: rgba(39, 174, 96, .2) 0 6px 12px;
-}
-</style>
+<link rel="stylesheet" href="game.css">
