--- a/play.html
+++ b/play.html
@@ -53,132 +53,4 @@ item[i].style.display="none";
 </script>
 </body>
 </html>
-<style type="text/css">
-    *
-    {
-    margin: 0;
-    padding: 0;
-    font-family: 'Roboto', sans-serif;
-    }
-    body
-    {
-    background: #ddd;
-    }
-    .container-fluid
-    {
-    width: 100%;
-    height: auto;
-    padding: 0px 0px 80px 0px;
-    }
-    .container
-    {
-    width: 1200px;
-    height: auto;
-    margin: auto;
-    }
-    .container .search
-    {
-    display: flex;
-    padding: 30px 0px;
-    justify-content: space-between;
-    }
-    .container .search h1
-    {
-    letter-spacing: 3px;
-    display: inline-block;
-    border-bottom: 2px solid green;
-    padding-bottom: 10px;
-    }
-    .container .search input
-    {
-    width: 60%;
-    padding: 5px 16px;
-    background: transparent;
-    border: 1px solid #000;
-    font-size: 20px;
-    text-transform: capitalize;
-    letter-spacing: 3px;
-    outline: none;
-    }
-    .container .search input::placeholder
-    {
-    color: green;
-    font-weight: 500;
-    }
-    .container .product-list
-    {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    text-align: left;
-    }
-    .container .product-list .product
-    {
-    margin-top: 30px;
-    }
-    .container .product-list .product h3
-    {
-    padding-top: 5px;
-    letter-spacing: 2px;
-    font-size: 22px;
-    font-weight: 400;
-    }
-    .container .product-list .product h4
-    {
-    padding: 3px 0px;
-    color: #48a809;
-    font-weight: 700;
-    letter-spacing: 3px;
-    }
-    button {
-  appearance: none;
-  backface-visibility: hidden;
-  background-color: #27ae60;
-  border-radius: 8px;
-  border-style: none;
-  box-shadow: rgba(39, 174, 96, .15) 0 4px 9px;
-  box-sizing: border-box;
-  color: #fff;
-  cursor: pointer;
-  display: inline-block;
-  font-family: Inter,-apple-system,system-ui,"Segoe UI",Helvetica,Arial,sans-serif;
-  font-size: 16px;
-  font-weight: 600;
-  letter-spacing: normal;
-  line-height: 1.5;
-  outline: none;
-  overflow: hidden;
-  padding: 13px 20px;
-  position: relative;
-  text-align: center;
-  text-decoration: none;
-  transform: translate3d(0, 0, 0);
-  transition: all .3s;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  vertical-align: top;
-  white-space: nowrap;
-}
-
-button:hover {
-  background-color: #1e8449;
-  opacity: 1;
-  transform: translateY(0);
-  transition-duration: .35s;
-}
-
-button:active {
-  transform: translateY(2px);
-  transition-duration: .35s;
-}
-
-button:hover {
-  box-shadow: rgba(39, 174, 96, .2) 0 6px 12px;
-}
-    
-body{
-    background-color: #000;
-    background-image: url(image/OP.jpg);
-}
-    </style>
+<link rel="stylesheet" href="game.css">
