--- a/info.html
+++ b/info.html
@@ -1,13 +1,14 @@
-<div class="button">
+<div style="text-align: left;">
     <a href="https://satyum29.github.io/gamers/game.html"><button>home</button></a>>
-    <a href="https://satyum29.github.io/gamers/play.html" ><button>play online</button></a>
-</div>
-
+   <a href="https://satyum29.github.io/gamers/info.html" ><button style="cursor: pointer;">info</button></a>
+   <a href="https://satyum29.github.io/gamers/play.html" ><button style="cursor: pointer;">play online</button></a>
+   <a href="https://satyum29.github.io/gamers/tutorial.html" ><button style="cursor: pointer;">Tutorial</button></a>
+   </div>
 
 <div class="info">
-    <h1><p>I Am Beast Cut</p></h1>
-    <h2><p>Its my own website so it's safe. </p></h2>
-    <h2><P>don't worry all the games which are provided are tested by me</P></h2>
+    <h1><p style="color: greenyellow;">I Am Beast Cut</p></h1>
+    <h2><p style="color: greenyellow;">Its my own website so it's safe. </p></h2>
+    <h2><P style="color: greenyellow;">don't worry all the games which are provided are tested by me</P></h2>
 </div>
 
 
