--- a/game.html
+++ b/game.html
@@ -4,11 +4,13 @@
 <html>
 <head>
 <title>Beast_Cut Games</title>
-
-<button>home</button>
+<div style="text-align: left;">
+ <a href="https://satyum29.github.io/gamers/game.html"><button>home</button></a>>
 <a href="https://satyum29.github.io/gamers/info.html" ><button style="cursor: pointer;">info</button></a>
 <a href="https://satyum29.github.io/gamers/play.html" ><button style="cursor: pointer;">play online</button></a>
 <a href="https://satyum29.github.io/gamers/tutorial.html" ><button style="cursor: pointer;">Tutorial</button></a>
+</div>
+
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -128,7 +130,7 @@
 </div>
 </div>
 <div class="Soon">
-        <p >  <h2>More Games Comming Soon...</h2>  </p>
+        <p style="text-align: end;">  <h2>More Games Comming Soon...</h2>  </p>
 </div>
        
 
