--- a/tutorial.html
+++ b/tutorial.html
@@ -6,9 +6,12 @@
 
 
        
-<a href="https://satyum29.github.io/gamers/game.html"><button style="cursor: pointer;">home</button></a>>
-<a href="https://satyum29.github.io/gamers/info.html" ><button style="cursor: pointer;">info</button></a>
-<a href="https://satyum29.github.io/gamers/play.html" ><button style="cursor: pointer;">play online</button></a>
+<div style="text-align: left;">
+  <a href="https://satyum29.github.io/gamers/game.html"><button>home</button></a>>
+ <a href="https://satyum29.github.io/gamers/info.html" ><button style="cursor: pointer;">info</button></a>
+ <a href="https://satyum29.github.io/gamers/play.html" ><button style="cursor: pointer;">play online</button></a>
+ <a href="https://satyum29.github.io/gamers/tutorial.html" ><button style="cursor: pointer;">Tutorial</button></a>
+ </div>
 
 
 
@@ -17,7 +20,7 @@
 </html>
 
  <div class="tut">    
-    <video width="1080" height="720" controls>
+    <video width="1080" height="720" controls style="text-align: center;">
         <source src="video/How To Install Fitgirl Repacks.mp4" type="video/mp4">  
               </video>
  </div>
