--- a/game.html
+++ b/game.html
@@ -45,7 +45,7 @@
                 <img src="image/content warning.jpeg" height="300" width="250">
                 <h3 style="color: aliceblue;">Content Warning</h3>
                 <h3 style="color: aliceblue;">(v1.9)</h3>
-                <h2><a href="https://fs1.bowfile.com/token/download/dl/j8fh/Content_Warning_v1.9.b.rar?download_token=8a6750403924b77b6a83a00260e3f2df38d65b0ffadde946792fb12a5a929b19" target="_blank"><button style="cursor: pointer;"><p > Download</p></button></a><h3 style="color: #fff;">password: 123</h3> </h2>
+                <h2><a href="https://fs1.bowfile.com/token/download/dl/j8fh/Content_Warning_v1.9.b.rar?download_token=8a6750403924b77b6a83a00260e3f2df38d65b0ffadde946792fb12a5a929b19" target="_blank"><button style="cursor: pointer;"><p > Download</p></button></a> </h2>
                 </div>
 
         <div class="product">
@@ -62,7 +62,7 @@
 <img src="image/sekiro-shadows-die-twice.jpg" height="300" width="250">
 <h3 style="color: aliceblue;">Sekiro</h3>
 <h3 > ...</h3>
-<h2><a href="magnet:?xt=urn:btih:072BA1C165E0D528D2E23EA0FCD35E066D3FCDAA&dn=Sekiro%3A+Shadows+Die+Twice+-+Game+of+the+Year+Edition+%28v1.06+%2B+Bonus+Content%2C+MULTi13%29+%5BFitGirl+Repack%2C+Selective+Download+-+from+7.2+GB%5D&tr=udp%3A%2F%2F46.148.18.250%3A2710&tr=udp%3A%2F%2Fopentor.org%3A2710&tr=udp%3A%2F%2Ftracker.coppersurfer.tk%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.opentrackr.org%3A1337%2Fannounce&tr=http%3A%2F%2Ftracker.dler.org%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.leechers-paradise.org%3A6969%2Fannounce&tr=udp%3A%2F%2F9.rarbg.me%3A2730%2Fannounce&tr=udp%3A%2F%2F9.rarbg.to%3A2770%2Fannounce&tr=udp%3A%2F%2Ftracker.pirateparty.gr%3A6969%2Fannounce&tr=http%3A%2F%2Fretracker.local%2Fannounce&tr=http%3A%2F%2Fretracker.ip.ncnet.ru%2Fannounce&tr=udp%3A%2F%2Fexodus.desync.com%3A6969%2Fannounce&tr=udp%3A%2F%2Fipv4.tracker.harry.lu%3A80%2Fannounce&tr=udp%3A%2F%2Fopen.stealth.si%3A80%2Fannounce&tr=udp%3A%2F%2Ftracker.zer0day.to%3A1337%2Fannounce&tr=udp%3A%2F%2Ftracker.leechers-paradise.org%3A6969%2Fannounce&tr=udp%3A%2F%2Fcoppersurfer.tk%3A6969%2Fannounce " target="_blank"><button style="cursor: pointer;"><p > Download</p></button></a><h3>password: 123</h3> </h2>
+<h2><a href="magnet:?xt=urn:btih:072BA1C165E0D528D2E23EA0FCD35E066D3FCDAA&dn=Sekiro%3A+Shadows+Die+Twice+-+Game+of+the+Year+Edition+%28v1.06+%2B+Bonus+Content%2C+MULTi13%29+%5BFitGirl+Repack%2C+Selective+Download+-+from+7.2+GB%5D&tr=udp%3A%2F%2F46.148.18.250%3A2710&tr=udp%3A%2F%2Fopentor.org%3A2710&tr=udp%3A%2F%2Ftracker.coppersurfer.tk%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.opentrackr.org%3A1337%2Fannounce&tr=http%3A%2F%2Ftracker.dler.org%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.leechers-paradise.org%3A6969%2Fannounce&tr=udp%3A%2F%2F9.rarbg.me%3A2730%2Fannounce&tr=udp%3A%2F%2F9.rarbg.to%3A2770%2Fannounce&tr=udp%3A%2F%2Ftracker.pirateparty.gr%3A6969%2Fannounce&tr=http%3A%2F%2Fretracker.local%2Fannounce&tr=http%3A%2F%2Fretracker.ip.ncnet.ru%2Fannounce&tr=udp%3A%2F%2Fexodus.desync.com%3A6969%2Fannounce&tr=udp%3A%2F%2Fipv4.tracker.harry.lu%3A80%2Fannounce&tr=udp%3A%2F%2Fopen.stealth.si%3A80%2Fannounce&tr=udp%3A%2F%2Ftracker.zer0day.to%3A1337%2Fannounce&tr=udp%3A%2F%2Ftracker.leechers-paradise.org%3A6969%2Fannounce&tr=udp%3A%2F%2Fcoppersurfer.tk%3A6969%2Fannounce " target="_blank"><button style="cursor: pointer;"><p > Download</p></button></a> </h2>
 </div>
 
 <div class="product">
