--- a/info.html
+++ b/info.html
@@ -1,8 +1,10 @@
+<div class="upper"> 
 <div style="text-align: left;">
-    <a href="https://satyum29.github.io/gamers/game.html"><button>home</button></a>>
-   <a href="https://satyum29.github.io/gamers/play.html" ><button style="cursor: pointer;">play online</button></a>
-   <a href="https://satyum29.github.io/gamers/tutorial.html" ><button style="cursor: pointer;">Tutorial</button></a>
-   <a href="https://satyum29.github.io/gamers/info.html" ><button style="cursor: pointer;">info</button></a>
+    <a href="https://satyum29.github.io/gamers/game.html"><button>Home</button></a>
+    <a href="https://satyum29.github.io/gamers/info.html" ><button >info</button></a>
+   <a href="https://satyum29.github.io/gamers/play.html" ><button >play online</button></a>
+   <a href="https://satyum29.github.io/gamers/tutorial.html" ><button >Tutorial</button></a>
+   </div>
 </div>
 
 <div class="info">
