--- a/play.html
+++ b/play.html
@@ -2,12 +2,14 @@
 <html>
 <head>
 <title>Satyam Games</title>
+<div class="upper"> 
 <div style="text-align: left;">
-    <a href="https://satyum29.github.io/gamers/game.html"><button>home</button></a>>
-   <a href="https://satyum29.github.io/gamers/info.html" ><button style="cursor: pointer;">info</button></a>
-   <a href="https://satyum29.github.io/gamers/play.html" ><button style="cursor: pointer;">play online</button></a>
-   <a href="https://satyum29.github.io/gamers/tutorial.html" ><button style="cursor: pointer;">Tutorial</button></a>
+    <a href="https://satyum29.github.io/gamers/game.html"><button>Home</button></a>
+    <a href="https://satyum29.github.io/gamers/info.html" ><button >info</button></a>
+   <a href="https://satyum29.github.io/gamers/play.html" ><button >play online</button></a>
+   <a href="https://satyum29.github.io/gamers/tutorial.html" ><button >Tutorial</button></a>
    </div>
+</div>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap" rel="stylesheet">
