--- a/game.html
+++ b/game.html
@@ -70,7 +70,7 @@
 <img src="image/A Difficult Game About Climbing.cover.jpg" height="300" width="250">
 <h3 style="color: aliceblue;">A Difficult Game</h3>
 <h3 style="color: aliceblue;"> About Climbing</h3>
-<h2><a href="https://filenext.org/5b30f9107f20c698/A.Difficult.Game.About.Climbing.zip?download_token=c4a1d940feb9d00ed2aed167fb55a9ade2525945c3f1903af077ff98adf64983" target="_blank"><button style="cursor: pointer;"><p > Download</p></button></a><h3 style="color: #fff;">password: 123</h3> </h2>
+<h2><a href="https://filenext.org/9848b0a7ab31c9be/A.Difficult.Game.About.Climbing.v1.1.zip?download_token=64f1eb0cec7d04adc8eb925dabab95b29c9e133e37f04e91361e6c410e88ae0b" target="_blank"><button style="cursor: pointer;"><p > Download</p></button></a><h3 style="color: #fff;">password:123</h3></h2>
 </div>
 
 <div class="product">
@@ -85,7 +85,7 @@
 <img src="image/cod.jpeg" height="300" width="250">
 <h3 style="color: aliceblue;">Call Of Duty </h3>
 <h3 style="color: aliceblue;">Modern Warfare 3</h3>
-<h2><a href="magnet:?xt=urn:btih:24D07D7050CA3FB00AF55752CEC597D7B1731058&dn=Call+of+Duty+Modern+Warfare+3-RELOADED&tr=http%3A%2F%2Fexodus.desync.com%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.1337x.org%3A80%2Fannounce&tr=http%3A%2F%2F9.rarbg.com%3A2710%2Fannounce&tr=http%3A%2F%2Fcpleft.com%3A2710%2Fannounce&tr=http%3A%2F%2Ftracker.publicbt.com%3A80%2Fannounce&tr=http%3A%2F%2Ftracker.novalayer.org%3A6969%2Fannounce&tr=http%3A%2F%2Ftracker.torrent.to%3A2710%2Fannounce&tr=udp%3A%2F%2Ftracker.istole.it%3A80%2Fannounce&tr=udp%3A%2F%2Ftracker.openbittorrent.com%3A80&tr=http%3A%2F%2Ftracker.torrentbay.to%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.opentrackr.org%3A1337%2Fannounce&tr=http%3A%2F%2Ftracker.openbittorrent.com%3A80%2Fannounce&tr=udp%3A%2F%2Fopentracker.i2p.rocks%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.internetwarriors.net%3A1337%2Fannounce&tr=udp%3A%2F%2Ftracker.leechers-paradise.org%3A6969%2Fannounce&tr=udp%3A%2F%2Fcoppersurfer.tk%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.zer0day.to%3A1337%2Fannounce" target="_blank"><button style="cursor: pointer;"><p > Download</p></button></a><h3 style="color: #fff;">password: 123</h3> </h2>
+<h2><a href="https://fs2.uploadbeast.com/games/Call.of.Duty.Modern.Warfare.3(GamingBeasts.com).zip?id=f4dece65a348ba6a59b1&expires=1714521600" target="_blank"><button style="cursor: pointer;"><p > Download</p></button></a> </h2>
 </div>
 
 
