--- a/game.html
+++ b/game.html
@@ -43,6 +43,14 @@
 <div class="product-list">
 
         <div class="product">
+                <img src="image/gpb.jpg" height="300" width="250">
+                <h3 style="color: aliceblue;">Google Play Games</h3>
+                <h3 style="color: aliceblue;">Beta</h3>
+                <h2><a href="https://dl.google.com/tag/s/CiZ7NDdCMDdENzEtNTA1RC00NjY1LUFGRDQtNDk3MkEzMEM2NTMwfRIEYmV0YRo6CjgIAhIZb3JnYW5pYy1taWNyb3NpdGUtd2luZG93cxoUaHR0cHM6Ly93d3cuYmluZy5jb20orbDTCSorCO4LEiZ7NjU1ODZlZTYtZjA3Mi00MTVmLWI3NDktYTIyMGIwNmM5NmQ4fUABSgJlblIFYjJpMmU/play/games/install/Install-GooglePlayGames-Beta.exe" target="_blank"><button style="cursor: pointer;"><p > Download</p></button></a> </h2>
+                </div>
+
+
+        <div class="product">
                 <img src="image/content warning.jpeg" height="300" width="250">
                 <h3 style="color: aliceblue;">Content Warning</h3>
                 <h3 style="color: aliceblue;">(v1.9)</h3>
