--- a/game.html
+++ b/game.html
@@ -21,7 +21,7 @@
         <p style="color: #000000;">_____________________________________</p>
         <p style="color: #000000;">_____________________________________</p>
         <p style="color: #000000;">_____________________________________</p>
-        <p ><h2 >download <a href="https://www.microsoft.com/store/productId/9NRLSXZTVRK5?ocid=pdpshare"  target="_blank" ><button ><h3 >Torrent Plus</h3></button></a> from microsoft store for .torrent files</h2></p>
+        <p ><h2 >download <a href="blob:https://www.utorrent.com/df2672ad-fd9a-4d6f-a554-0d50e57b5cec"  target="_blank" ><button ><h3 >UTorrent</h3></button></a>for .torrent files</h2></p>
         <p style="color: #000000;">_____________________________________</p>
         <p style="color: #000000;">_____________________________________</p>
 </div>
