--- a/game.html
+++ b/game.html
@@ -10,6 +10,7 @@
  <a href="https://satyum29.github.io/gamers/info.html" ><button >info</button></a>
 <a href="https://satyum29.github.io/gamers/play.html" ><button >play online</button></a>
 <a href="https://satyum29.github.io/gamers/tutorial.html" ><button >Tutorial</button></a>
+
 </div>
 </div>
 
@@ -36,10 +37,10 @@
 <div class="container-fluid">
 <div class="container">
 <div class="search">
-<h1>All Games</h1>
-
+<h1>Games</h1>
 <input type="text" name="" id="find" placeholder="search here...." onkeyup="search()">
 </div>
+
 <div class="product-list">
 
         <div class="product">
@@ -61,7 +62,7 @@
                 <img src="image/pal.jpeg" height="300" width="250">
                 <h3 style="color: aliceblue;">Palworld</h3>
                 <h3 style="color: #fff;"> (v0.2.3.0)</h3>
-                <h2><a href="magnet:?xt=urn:btih:3F25172F5D3438B8B12856B8E2287001882FDF5F&dn=Palworld+v0.2.3.0&tr=udp%3A%2F%2Ftracker.torrent.eu.org%3A451%2Fannounce&tr=udp%3A%2F%2Fexodus.desync.com%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.moeking.me%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.opentrackr.org%3A1337%2Fannounce&tr=udp%3A%2F%2Fopen.stealth.si%3A80%2Fannounce&tr=udp%3A%2F%2Ftracker.theoks.net%3A6969%2Fannounce&tr=udp%3A%2F%2Fmovies.zsw.ca%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.tiny-vps.com%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker-udp.gbitt.info%3A80%2Fannounce&tr=http%3A%2F%2Ftracker.gbitt.info%3A80%2Fannounce&tr=https%3A%2F%2Ftracker.gbitt.info%3A443%2Fannounce&tr=http%3A%2F%2Ftracker.ccp.ovh%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.ccp.ovh%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.dler.com%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.opentrackr.org%3A1337%2Fannounce&tr=http%3A%2F%2Ftracker.openbittorrent.com%3A80%2Fannounce&tr=udp%3A%2F%2Fopentracker.i2p.rocks%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.internetwarriors.net%3A1337%2Fannounce&tr=udp%3A%2F%2Ftracker.leechers-paradise.org%3A6969%2Fannounce&tr=udp%3A%2F%2Fcoppersurfer.tk%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.zer0day.to%3A1337%2Fannounce"target="_blank"><button style="cursor: pointer;"><p > Download</p></button></a><h3 style="color: #fff;">password:123</h3>
+                <h2><a href="torrent/palworld v0.2.3.0.torrent"target="_blank"><button style="cursor: pointer;"><p > Download</p></button></a><h3 style="color: #fff;">password:123</h3>
                 </div>
     
 <div class="product">
@@ -138,12 +139,10 @@
 </div>
 </div>
 </div>
-</div>
-</div>
 <div class="Soon">
         <p style="text-align: end;">  <h2>More Games Comming Soon...</h2>  </p>
 </div>
-       
+</div>
 
 
 <script class="javascript">
@@ -168,4 +167,5 @@
 </html>
 
     <link rel="stylesheet" href="game.css">
+
    
