--- a/game.html
+++ b/game.html
@@ -62,7 +62,7 @@
                 <img src="image/pal.jpeg" height="300" width="250">
                 <h3 style="color: aliceblue;">Palworld</h3>
                 <h3 style="color: #fff;"> (v0.2.3.0)</h3>
-                <h2><a href="torrent/palworld v0.2.3.0.torrent"target="_blank"><button style="cursor: pointer;"><p > Download</p></button></a><h3 style="color: #fff;">password:123</h3>
+                <h2><a href="torrent/palworld v0.2.3.0.torrent"target="_blank"><button style="cursor: pointer;"><p > Download</p></button></a>
                 </div>
     
 <div class="product">
