--- a/info.html
+++ b/info.html
@@ -6,11 +6,16 @@
    <a href="https://satyum29.github.io/gamers/tutorial.html" ><button >Tutorial</button></a>
    </div>
 </div>
-
+<p>.</p>
+<p>.</p>
+<p>.</p>
+<p>.</p>
+<p>.</p>
+<p>.</p>
 <div class="info">
-    <h1><p style="color: greenyellow;">I Am Beast Cut</p></h1>
-    <h2><p style="color: greenyellow;">Its my own website so it's safe. </p></h2>
-    <h2><P style="color: greenyellow;">don't worry all the games which are provided are tested by me</P></h2>
+    <h1><p >I Am Beast Cut</p></h1>
+    <h2><p >Its my own website so it's safe. </p></h2>
+    <h2><P>don't worry all the games which are provided are tested by me</P></h2>
 </div>
 
 
