--- a/game.html
+++ b/game.html
@@ -44,6 +44,15 @@
 <div class="product-list">
 
         <div class="product">
+                <img src="image/burnout.jpeg" height="300" width="250">
+                <h3 style="color: aliceblue;">BurnOut Paradice</h3>
+                <h3 style="color: rgb(0, 0, 0);">.</h3>
+                <h2><a href=" https://fs4.1cloudfile.com/token/download/dl/m0nL/[Game3rb.com]_Burnout.Paradise.The.Ultimate.Box.v1.1.0.iso?download_token=45a53122bedc239cb6e6984dfd6458fdba3fe5250dc06c19b373f4263460564f" target="_blank"><button style="cursor: pointer;"><p > Download</p></button></a> </h2>
+                </div>
+
+       
+
+        <div class="product">
                 <img src="image/gpb.jpg" height="300" width="250">
                 <h3 style="color: aliceblue;">Google Play Games</h3>
                 <h3 style="color: aliceblue;">Beta</h3>
@@ -99,8 +108,15 @@
 <img src="image/hitman 3.jpeg" height="300" width="250">
 <h3 style="color: aliceblue;">hitman 3</h3>
 <h3 style="color: #000000;">...</h3>
-<h2><a href="magnet:?xt=urn:btih:2FFCE99E178450E96296A78011395E338EB2A47F&dn=Hitman.3-CODEX&tr=udp%3a%2f%2ftracker.trackerfix.com%3a82%2fannounce&tr=udp%3a%2f%2f9.rarbg.me%3a2880%2fannounce&tr=udp%3a%2f%2f9.rarbg.to%3a2970%2fannounce" target="_blank"> <button style="cursor: pointer;"><p > Download</p></button> </a></h2>
+<h2><a href="https://fs2.uploadbeast.com/games/Hitman.3(GamingBeasts.com).zip?id=d5e340dbb0fdcfd0a2d6&expires=1715212800" target="_blank"> <button style="cursor: pointer;"><p > Download</p></button> </a></h2>
 </div>
+
+<div class="product">
+        <img src="image/hitman.jpeg" height="300" width="250">
+        <h3 style="color: aliceblue;">hitman</h3>
+        <h3 style="color: #000000;">...</h3>
+        <h2><a href="https://fs2.uploadbeast.com/games/Hitman(GamingBeasts.com).zip?id=5c43963211100fc2ef1a&expires=1715212800" target="_blank"> <button style="cursor: pointer;"><p > Download</p></button> </a></h2>
+        </div>
 
 
 <div class="product">
