--- a/tutorial.html
+++ b/tutorial.html
@@ -1,18 +1,20 @@
-
-
-  <html>
+<html>
 <head>
-<title>Satyam Games</title>
-
-
-  <div class="upper">    
-<div style="text-align: left;">
-  <a href="https://satyum29.github.io/gamers/game.html"><button>Home</button></a>
-  <a href="https://satyum29.github.io/gamers/info.html" ><button >info</button></a>
- <a href="https://satyum29.github.io/gamers/play.html" ><button >play online</button></a>
- <a href="https://satyum29.github.io/gamers/tutorial.html" ><button >Tutorial</button></a>
- </div>
-</div> 
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="game.css">
+</head>
+<body>
+<div id="navbar">
+  <a href="https://satyum29.github.io/gamers/game.html" id="logo">Beast_Cut</a>
+  <div id="navbar-right" class="topnav" >   
+    <a href ="https://satyum29.github.io/gamers/game.html">Home</a>
+    <a href ="https://satyum29.github.io/gamers/info.html">info</a>
+    <a href ="https://satyum29.github.io/gamers/play.html">Play Online</a>
+    <a href ="https://satyum29.github.io/gamers/tutorial.html">Torrent</a>
+    <a href ="https://satyum29.github.io/gamers/tutorial.html">Tutorial</a>
+    
+</div>
+</div>
 
 
   
