--- a/play.html
+++ b/play.html
@@ -1,15 +1,21 @@
-<!DOCTYPE html>
 <html>
 <head>
-<title>Satyam Games</title>
-<div class="upper"> 
-<div style="text-align: left;">
-    <a href="https://satyum29.github.io/gamers/game.html"><button>Home</button></a>
-    <a href="https://satyum29.github.io/gamers/info.html" ><button >info</button></a>
-   <a href="https://satyum29.github.io/gamers/play.html" ><button >play online</button></a>
-   <a href="https://satyum29.github.io/gamers/tutorial.html" ><button >Tutorial</button></a>
-   </div>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="game.css">
+</head>
+<body>
+<div id="navbar">
+  <a href="https://satyum29.github.io/gamers/game.html" id="logo">Beast_Cut</a>
+  <div id="navbar-right" class="topnav" >   
+    <a href ="https://satyum29.github.io/gamers/game.html">Home</a>
+    <a href ="https://satyum29.github.io/gamers/info.html">info</a>
+    <a href ="https://satyum29.github.io/gamers/play.html">Play Online</a>
+    <a href ="https://satyum29.github.io/gamers/tutorial.html">Torrent</a>
+    <a href ="https://satyum29.github.io/gamers/tutorial.html">Tutorial</a>
+
 </div>
+</div>
+
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap" rel="stylesheet">
@@ -25,7 +31,7 @@
     </style>
     </head>
     <body>
- <div style="align-items: center;">
+ <div class="game">
 <iframe src="https://ev.io/" height="720px" width="1200px""></iframe>
  </div>
 
