--- a/game.html
+++ b/game.html
@@ -18,7 +18,7 @@
     <a href ="https://satyum29.github.io/gamers/game.html">Home</a>
     <a href ="https://satyum29.github.io/gamers/info.html">info</a>
     <a href ="https://satyum29.github.io/gamers/play.html">Play Online</a>
-    <a href ="https://satyum29.github.io/gamers/tutorial.html">Torrent</a>
+    <a href ="https://satyum29.github.io/gamers/torrent.html">Torrent</a>
     <a href ="https://satyum29.github.io/gamers/tutorial.html">Tutorial</a>
     <input type="text" name="" id="find" placeholder="search here...." onkeyup="search()"> 
 </div>
