--- a/info.html
+++ b/info.html
@@ -10,18 +10,27 @@
     <a href ="https://satyum29.github.io/gamers/game.html">Home</a>
     <a href ="https://satyum29.github.io/gamers/info.html">info</a>
     <a href ="https://satyum29.github.io/gamers/play.html">Play Online</a>
-    <a href ="https://satyum29.github.io/gamers/tutorial.html">Torrent</a>
+    <a href ="https://satyum29.github.io/gamers/torrent.html">Torrent</a>
     <a href ="https://satyum29.github.io/gamers/tutorial.html">Tutorial</a>
    
 </div>
 </div>
+<script>
+  window.onscroll = function() {scrollFunction()};
+  function scrollFunction() {
+    if (document.body.scrollTop > 50 || document.documentElement.scrollTop > 50) {
+      document.getElementById("navbar").style.padding = "15px 10px";
+      document.getElementById("logo").style.fontSize = "20px";
+    } else {
+      document.getElementById("navbar").style.padding = "50px 10px";
+      document.getElementById("logo").style.fontSize = "35px";
+    }
+  }
+  </script>
+  </body>
+  </html>
+  
 
-<p>.</p>
-<p>.</p>
-<p>.</p>
-<p>.</p>
-<p>.</p>
-<p>.</p>
 <div class="info">
     <h1><p >I Am Beast Cut</p></h1>
     <h2><p >Its my own website so it's safe. </p></h2>
