--- a/play.html
+++ b/play.html
@@ -10,12 +10,26 @@
     <a href ="https://satyum29.github.io/gamers/game.html">Home</a>
     <a href ="https://satyum29.github.io/gamers/info.html">info</a>
     <a href ="https://satyum29.github.io/gamers/play.html">Play Online</a>
-    <a href ="https://satyum29.github.io/gamers/tutorial.html">Torrent</a>
+    <a href ="https://satyum29.github.io/gamers/torrent.html">Torrent</a>
     <a href ="https://satyum29.github.io/gamers/tutorial.html">Tutorial</a>
 
 </div>
 </div>
-
+<script>
+  window.onscroll = function() {scrollFunction()};
+  function scrollFunction() {
+    if (document.body.scrollTop > 50 || document.documentElement.scrollTop > 50) {
+      document.getElementById("navbar").style.padding = "15px 10px";
+      document.getElementById("logo").style.fontSize = "20px";
+    } else {
+      document.getElementById("navbar").style.padding = "50px 10px";
+      document.getElementById("logo").style.fontSize = "35px";
+    }
+  }
+  </script>
+  </body>
+  </html>
+  
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap" rel="stylesheet">
