--- a/game.html
+++ b/game.html
@@ -60,6 +60,13 @@ function scrollFunction() {
 <div class="product-list">
 
         <div class="product">
+                <img src="image/fh.jpeg" height="300" width="250">
+                <h3 style="color: aliceblue;">For Honor</h3>
+                <h3 style="color: rgb(0, 0, 0);">.</h3>
+                <h2><a href="https://torrent5.net/en/uploads/files/2020-10/1603153276_for-honor-deluxe-edition.torrent" target="_blank"><button style="cursor: pointer;"><p > Download</p></button></a> </h2>
+                </div>
+
+        <div class="product">
                 <img src="image/mafia2.jpg" height="300" width="250">
                 <h3 style="color: aliceblue;">Mafia 2</h3>
                 <h3 style="color: rgb(0, 0, 0);">.</h3>
@@ -92,8 +99,11 @@ function scrollFunction() {
  <div class="product">
 <img src="image/pal.jpeg" height="300" width="250">
 <h3 style="color: aliceblue;">Palworld</h3>
-<h3 style="color: #fff;"> (v0.2.3.0)</h3>
-<h2><a href="magnet:?xt=urn:btih:3F25172F5D3438B8B12856B8E2287001882FDF5F&dn=Palworld+v0.2.3.0&tr=udp%3A%2F%2Ftracker.torrent.eu.org%3A451%2Fannounce&tr=udp%3A%2F%2Fexodus.desync.com%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.moeking.me%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.opentrackr.org%3A1337%2Fannounce&tr=udp%3A%2F%2Fopen.stealth.si%3A80%2Fannounce&tr=udp%3A%2F%2Ftracker.theoks.net%3A6969%2Fannounce&tr=udp%3A%2F%2Fmovies.zsw.ca%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.tiny-vps.com%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker-udp.gbitt.info%3A80%2Fannounce&tr=http%3A%2F%2Ftracker.gbitt.info%3A80%2Fannounce&tr=https%3A%2F%2Ftracker.gbitt.info%3A443%2Fannounce&tr=http%3A%2F%2Ftracker.ccp.ovh%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.ccp.ovh%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.dler.com%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.opentrackr.org%3A1337%2Fannounce&tr=http%3A%2F%2Ftracker.openbittorrent.com%3A80%2Fannounce&tr=udp%3A%2F%2Fopentracker.i2p.rocks%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.internetwarriors.net%3A1337%2Fannounce&tr=udp%3A%2F%2Ftracker.leechers-paradise.org%3A6969%2Fannounce&tr=udp%3A%2F%2Fcoppersurfer.tk%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.zer0day.to%3A1337%2Fannounce"target="_blank"><button style="cursor: pointer;"><p > Download</p></button></a><h3 style="color: #fff;">password:123</h3></h2>
+<h3 style="color: #fff;"> (v0.2.4.0)</h3>
+<h2><a href="https://bowfile.com/jfKb"target="_blank"><button style="cursor: pointer;"><p >P1</p></button></a>
+<a href="https://bowfile.com/nrTe"target="_blank"><button style="cursor: pointer;"><p >P2</p></button></a>
+<a href="https://bowfile.com/nrTh"target="_blank"><button style="cursor: pointer;"><p >P3</p></button></a>
+<a href="https://bowfile.com/nrTg"target="_blank"><button style="cursor: pointer;"><p >P4</p></button></a></h2>
  </div>
     
 <div class="product">
