--- a/game.html
+++ b/game.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <div id="navbar">
-  <a href="#home" id="logo">Beast_Cut</a>
+  <a id="logo">Beast_Cut</a>
   <div id="navbar-right" class="topnav" >   
     <a href ="https://satyum29.github.io/gamers/game.html">Home</a>
     <a href ="https://satyum29.github.io/gamers/info.html">info</a>
@@ -58,6 +58,13 @@ function scrollFunction() {
                 </div>
 
 <div class="product-list">
+
+        <div class="product">
+                <img src="image/got.jpeg" height="300" width="250">
+                <h3 style="color: aliceblue;">Ghost Of</h3>
+                <h3 style="color: rgb(255, 255, 255);">Tsushima</h3>
+                <h2><a href="https://fs3.bowfile.com/token/download/dl/f455/Ghost_of_Tsushima_DIRECTORS_CUT_Build_05152024.torrent?download_token=de2488c7c0ad83158e61f0f9700a94b10b97e007e3ffcf6e12a130a5cd9d3cb0" target="_blank"><button style="cursor: pointer;"><p > Download</p></button></a> </h2>
+                </div>
 
         <div class="product">
                 <img src="image/fh.jpeg" height="300" width="250">
