--- a/game.html
+++ b/game.html
@@ -60,6 +60,13 @@ function scrollFunction() {
 <div class="product-list">
 
         <div class="product">
+                <img src="image/raji.jpeg" height="300" width="250">
+                <h3 style="color: aliceblue;">Raji</h3>
+                <h3 style="color: rgb(0, 0, 0);">.</h3>
+                <h2><a href="magnet:?xt=urn:btih:BEFF5C43F0B26B4CFD21BB154E89F71B556D50CB&dn=Raji%3A+An+Ancient+Epic+-+Enhanced+Edition+%28%2B+Bonus+OST%2C+MULTi10%29+%5BFitGirl+Repack%2C+Selective+Download+-+from+4.4+GB%5D&tr=udp%3A%2F%2Fopentor.org%3A2710&tr=udp%3A%2F%2Ftracker.opentrackr.org%3A1337%2Fannounce&tr=http%3A%2F%2Ftracker.dler.org%3A6969%2Fannounce&tr=udp%3A%2F%2Fexodus.desync.com%3A6969%2Fannounce&tr=udp%3A%2F%2Fipv4.tracker.harry.lu%3A80%2Fannounce&tr=udp%3A%2F%2Fopen.stealth.si%3A80%2Fannounce&tr=udp%3A%2F%2Fretracker.lanta-net.ru%3A2710%2Fannounce&tr=udp%3A%2F%2Ftracker.cyberia.is%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.moeking.me%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.tiny-vps.com%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.torrent.eu.org%3A451%2Fannounce&tr=udp%3A%2F%2Fopentor.net%3A6969&tr=udp%3A%2F%2Ftracker.openbittorrent.com%3A6969%2Fannounce&tr=udp%3A%2F%2Fexodus.desync.com%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.opentrackr.org%3A1337%2Fannounce&tr=http%3A%2F%2Ftracker.openbittorrent.com%3A80%2Fannounce&tr=udp%3A%2F%2Fopentracker.i2p.rocks%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.internetwarriors.net%3A1337%2Fannounce&tr=udp%3A%2F%2Ftracker.leechers-paradise.org%3A6969%2Fannounce&tr=udp%3A%2F%2Fcoppersurfer.tk%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.zer0day.to%3A1337%2Fannounce" target="_blank"><button style="cursor: pointer;"><p > Download</p></button></a> </h2>
+                </div>
+
+        <div class="product">
                 <img src="image/got.jpeg" height="300" width="250">
                 <h3 style="color: aliceblue;">Ghost Of</h3>
                 <h3 style="color: rgb(255, 255, 255);">Tsushima</h3>
