--- a/game.html
+++ b/game.html
@@ -59,6 +59,14 @@ function scrollFunction() {
 
 <div class="product-list">
 
+
+        <div class="product">
+                <img src="image/Cricket-19-Free-download.jpg" height="300" width="250">
+                <h3 style="color: aliceblue;">Cricket 19</h3>
+                <h3 style="color: rgb(0, 0, 0);">.</h3>
+                <h2><a href="https://torgamez.com/torrents/t74/Cricket_19_L.torrent" target="_blank"><button style="cursor: pointer;"><p > Download</p></button></a> </h2>
+                </div>
+
         <div class="product">
                 <img src="image/raji.jpeg" height="300" width="250">
                 <h3 style="color: aliceblue;">Raji</h3>
