--- a/tutorial.html
+++ b/tutorial.html
@@ -1,3 +1,12 @@
+<head>
+	<link rel="icon" type="image/png" href="image/sas.jpg" />
+</head>
+<html>
+<head>
+<title>Beast_Cut Games</title>
+</head>
+</html>
+
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,7 +18,7 @@
   <div id="navbar-right" class="topnav" >   
     <a href ="https://satyum29.github.io/gamers/game.html">Home</a>
     <a href ="https://satyum29.github.io/gamers/info.html">info</a>
-    <a href ="https://satyum29.github.io/gamers/play.html">Play Online</a>
+    <a href ="https://satyum29.github.io/gamers/gallery.html">Gallery</a>
     <a href ="https://satyum29.github.io/gamers/torrent.html">Torrent</a>
     <a href ="https://satyum29.github.io/gamers/tutorial.html">Tutorial</a>
     
