--- a/game.html
+++ b/game.html
@@ -1,3 +1,4 @@
+
 <head>
         <link rel="icon" type="image/png" href="image/sas.jpg" />
     </head>
@@ -8,6 +9,7 @@
 
 <html>
 <head>
+
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="game.css">
 </head>
@@ -17,12 +19,13 @@
   <div id="navbar-right" class="topnav" >   
     <a href ="https://satyum29.github.io/gamers/game.html">Home</a>
     <a href ="https://satyum29.github.io/gamers/info.html">info</a>
-    <a href ="https://satyum29.github.io/gamers/play.html">Play Online</a>
+    <a href ="https://satyum29.github.io/gamers/gallery.html">Gallery</a>
     <a href ="https://satyum29.github.io/gamers/torrent.html">Torrent</a>
     <a href ="https://satyum29.github.io/gamers/tutorial.html">Tutorial</a>
     <input type="text" name="" id="find" placeholder="search here...." onkeyup="search()"> 
 </div>
 </div>
+
 
 
 <script>
@@ -49,6 +52,7 @@ function scrollFunction() {
         
 <div class="boxg">
 <body>
+
 
         <div class="container-fluid">
                 <div class="container">
