--- a/gallery.html
+++ b/gallery.html
@@ -161,7 +161,7 @@
 <div class="container-fluid">
 	<div class="container">
 	<div class="search">
-	<h1>ART</h1>
+	<h1>Artist</h1>
 	<input type="text" name="" id="find" placeholder="search here...." onkeyup="search()"> 
 	</div>
 <div class="product-list">
