--- a/gallery.html
+++ b/gallery.html
@@ -39,7 +39,7 @@
   
 <div class="gallery">
 <h1>welcome to your gallery </h1>
-<h3>you can also upload your artwork here (just dm us on <a href="https://discord.gg/fuNdnhaQeC">discord</a>)</h3>
+<h3>you can also upload your artwork here (just dm us on <a href="https://discord.com/channels/1147557150525227170/1244897306151751700">discord</a>)</h3>
 </div>
 
 
