--- a/gallery.html
+++ b/gallery.html
@@ -145,12 +145,12 @@
 			</div>
 			<div class="slide">
 				<h1 class="slide-number">
-					<img src="slides/vedant2.jpeg" >
+					<img src="slides/vedant3.jpeg" >
 				</h1> 
 			</div>
 			<div class="slide">
 				<h1 class="slide-number">
-					<img src="slides/vedant1.jpeg" >
+					<img src="slides/vedant4.jpeg" >
 				</h1> 
 			</div>
 		</div>
@@ -167,17 +167,30 @@
 <div class="product-list">
 
 	<div class="product">
-			<img src="slides/vedant1.jpeg" height="300" width="250">
+			<img src="slides/vedant1.jpeg" height="300" width="280">
 		    <h3 style="color: aliceblue;" >Vedant</h3>
 			<h2><a href="slides/vedant1.jpeg" target="_blank"><button style="cursor: pointer;"><p >open</p></button></a> </h2>
 			</div>
 
 			<div class="product">
-				<img src="slides/vedant2.jpeg" height="300" width="250">
+				<img src="slides/vedant2.jpeg" height="300" width="280">
 				<h3 style="color: aliceblue;">Vedant</h3>
 				<h2><a href="slides/vedant2.jpeg" target="_blank"><button style="cursor: pointer;"><p >open</p></button></a> </h2>
 				</div>
 	
+				
+			<div class="product">
+				<img src="slides/vedant3.jpeg" height="300" width="280">
+				<h3 style="color: aliceblue;">Vedant</h3>
+				<h2><a href="slides/vedant3.jpeg" target="_blank"><button style="cursor: pointer;"><p >open</p></button></a> </h2>
+				</div>
+
+				
+			<div class="product">
+				<img src="slides/vedant4.jpeg" height="300" width="280">
+				<h3 style="color: aliceblue;">Vedant</h3>
+				<h2><a href="slides/vedant4.jpeg" target="_blank"><button style="cursor: pointer;"><p >open</p></button></a> </h2>
+				</div>
 </div>
 </div>
 </div>
